# StoneFlow

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  COMMIT_MSG.txt  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
Docs/: assets-library-v2-acceptance.md
docs/: ARCHITECTURE.md  dependency-injection.md  error-handling-guide.md  feature-domain-suites-migration-map.md  feature-modules-merge-plan.md  performance-optimization.md  service-layer-architecture.md  state-management-migration-plan.md  state-management-migration.md  tanstack-query-vs-pinia-colada.md  testing-strategy.md
src/: ARCHITECTURE.md  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: assets.rs  hello.rs  logs.rs  mod.rs  projects.rs  spaces.rs  sync.rs  tasks.rs
src-tauri/src/db/: migrations.rs  mod.rs  path.rs
src-tauri/src/db/entities/: app_settings.rs  asset_diary_entries.rs  asset_notes.rs  asset_snippets.rs  asset_vault_entries.rs  links.rs  mod.rs  prelude.rs  project_activity_logs.rs  project_links.rs  project_tags.rs  projects.rs  sea_orm_active_enums.rs  spaces.rs  tags.rs  task_activity_logs.rs  task_links.rs  task_tags.rs  tasks.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_projects_and_activity.sql  0003_add_task_fields.sql  0004_add_project_priority.sql  0006_add_task_project_path.sql  0008_reset_task_model.sql
src-tauri/src/db/migrations/archive/: 0005_rename_default_projects.sql  0007_add_task_planned_end_date.sql  0009_update_project_data_model.sql
src-tauri/src/db/migrator/: m01_init.rs  m02_task_activity_logs.rs  m03_project_activity_logs.rs  m04_relation_sync_tracking.rs  m05_assets_library_v2.rs  m20240101_000001_seed.rs  mod.rs
src-tauri/src/db/seed/: mod.rs  projects.rs  spaces.rs
src-tauri/src/repos/: activity_log_repo.rs  asset_repo.rs  common_task_utils.rs  link_repo.rs  mod.rs  project_repo.rs  space_repo.rs  tag_repo.rs  task_repo.rs
src-tauri/src/repos/project_repo/: activity_logs.rs  helpers.rs  mutation.rs  query.rs
src-tauri/src/repos/task_repo/: activity_logs.rs  create.rs  custom_fields.rs  delete.rs  links.rs  list.rs  mod.rs  mutation.rs  query.rs  stats.rs  tags.rs  update.rs  update_builder.rs  validations.rs
src-tauri/src/services/: assets.rs  mod.rs  project_service.rs  sync_service.rs  task_service.rs  task_service_tests.rs
src-tauri/src/services/project/: archive.rs  create.rs  delete_subtree.rs  dto.rs  helpers.rs  mod.rs  reorder.rs  restore.rs  update.rs
src-tauri/src/services/sync/: connection.rs  dto.rs  error.rs  helpers.rs  mod.rs  pull.rs  push.rs  report.rs  watermarks.rs
src-tauri/src/services/sync/upsert/: append_only.rs  links.rs  mod.rs  projects.rs  relations.rs  spaces.rs  tasks.rs  vault_entries.rs
src-tauri/src/services/task/: complete.rs  create.rs  delete.rs  dto.rs  helpers.rs  mod.rs  reorder.rs  update.rs
src-tauri/src/types/: dto.rs  error.rs  mod.rs
src/app/: bootstrap.ts  injection-keys.ts  providers.ts
src/components/: AutoSyncCard.vue  BrandLogo.vue  CreateProjectModal.vue  CreateTaskModal.vue  (+18 more)
(+865 files in other folders)
