[package]
name = "stoneflow"
version = "0.1.4"
description = "一个以「完成」为核心、以「项目」为骨架的本地优先桌面效率系统"
authors = ["stonefish"]
edition = "2021"

# 更多字段与写法参考：https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# `_lib` 后缀看起来多余，但它能保证库名唯一，避免与二进制名称冲突。
# 这似乎只在 Windows 上会遇到，参考：https://github.com/rust-lang/cargo/issues/8519
name = "stoneflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev.package.scrypt]
opt-level = 3

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "sqlx-postgres"] }
sea-orm-migration = "1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
